objects/WildLife__c.object
<CustomObject>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Levevl__c</fullName>
        <label>Security Levevl</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <label>WildLife</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>WildLife Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WildLifes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>